updated tests and updated css file for styling

--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
 </head>
 <body>
 
-<H1 id="userIP"></H1>
-<H2 id="userHeader"></H2>
-<H2 id="date-time"></H2>
-<h3 id="valid-JSON"></h3>
-<h3 id="md5"></h3>
+<div id="banner">
+    <h1>Welcome</h1>
+</div>
+
+<div id="ip-header">
+    <p id="userIP">Your IP Address is: <br> </p>
+    <p id="userHeader">Returned headers are: <br> </p>
+    <p id="date-time"></p>
+</div>
 
 <form id="user-form">
     <label>
@@ -27,6 +31,11 @@
     <br>
     <button type="submit">Submit</button>
 </form>
+
+<div id="user-submit">
+    <h3 id="valid-JSON"></h3>
+    <h3 id="md5"></h3>
+</div>
 
 </body>
 </html>
