added placeholders to html inputs

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 
 <form id="user-form">
     <label>
-        Type in text to check for valid JSON
-        <input name="text-input" type="text"/>
+        Type in text to check if it's valid JSON
+        <input name="text-input" type="text" placeholder="Try {'key':'value'}"/>
     </label>
     <br>
     <label>
         Type in text to find the md5
-        <input name="md5-input" type="text"/>
+        <input name="md5-input" type="text" placeholder="Try anything"/>
     </label>
     <br>
     <button type="submit">Submit</button>
